# Penrose

./: .gitignore  LICENSE  Main.hs  Penrose.cabal  README.md  cabal.sandbox.config  netdecomp.vim
bench/: Benches.hs  Benchmark.hs
examples/: buffer-slow.netdecomp  buffer.netdecomp  clique.netdecomp  conjunction_tree.netdecomp  counter.netdecomp  cyclic.netdecomp  dac.netdecomp  disjunction_tree.netdecomp  hartstone.netdecomp  iterated_choice.netdecomp  over.netdecomp  philo.netdecomp  replicator.netdecomp  rw.netdecomp  subsets.netdecomp  token_ring.netdecomp
examples/lib/: epsilon.nfa  epsilon.nwb  eta.nfa  eta.nwb  id.nfa  id.nwb  id2.nfa  id2.nwb  opbEmpty.nfa  opbEmpty.nwb  opbFull.nfa  opbFull.nwb
mtbdd/: mtbdd.cabal
mtbdd/src/: MTBDD.hs
mtbdd/src/MTBDD/: IntIntMap.hs  Internals.hs  Make.hs  Operation.hs
mtbdd/test/: TestMain.hs
src/: GHCI.hs  LOLANets.hs  LTS.hs  MapSetUtils.hs  Marking.hs  Minimisation.hs  NFA.hs  Nets.hs  PEP.hs  PEPParser.hs  PEPReadArcs.hs  ParseNFA.hs  ProcessExpr.hs  Run.hs  Util.hs
src/DSL/: ComponentsAndWiringParser.hs  Expr.hs  ExprDef.hs  Main.hs  ProcessParse.hs  RawExprLexer.x  RawExprParser.y
test/: NFAGen.hs  NetGen.hs  TestMain.hs
