name:                Penrose
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              Owen Stephens, Pawel Sobocinski
maintainer:          owen@owenstephens.co.uk

build-type:          Simple

cabal-version:       >=1.8

library
    exposed-modules: LTS,
                     DSL.ComponentsAndWiringParser,
                     DSL.RawExprParser,
                     DSL.Expr,
                     DSL.ProcessParse,
                     NFA,
                     Nets,
                     LOLANets,
                     ProcessExpr,
                     Minimisation,
                     Marking,
                     PEP,
                     PEPParser,
                     PEPReadArcs,
                     MapSetUtils,
                     GHCI,
                     Util,
                     Run,
                     ParseNFA

    hs-source-dirs: src
    other-modules:  DSL.RawExprLexer
    Build-Tools:    alex, happy

    ghc-options: -Wall -O2 -rtsopts -threaded
    ghc-prof-options: -auto-all

    build-depends:       base >= 4,
                         array >= 0.4,
                         containers >= 0.5.2,
                         unordered-containers >= 0.2,
                         dlist >= 0.2,
                         hashable >= 1.2,
                         mtl >= 2,
                         transformers >= 0.3,
                         nat >= 0.1,
                         parsec >= 3.0.0,
                         directory >= 1.1,
                         text >= 0.10,
                         bytestring >= 0.10,
                         arithmoi >= 0.1,
                         process >= 1.2.0.0,
                         xml >= 1.3.10,
                         either >= 0.1,
                         deepseq >= 1.1,
                         parallel >= 2.2,
                         semigroups >= 0.7,
                         filepath >= 1.0,
                         unix-compat >= 0.1,
                         lens >= 2.0 && < 4.14,
                         safe >= 0.2,
                         mtbdd == 0.12
executable Penrose
    main-is: Main.hs

    ghc-options: -Wall -O2 -rtsopts -threaded
    ghc-prof-options: -auto-all

    build-depends:       Penrose,
                         base >= 4,
                         containers >= 0.5.2,
                         mtl >= 2,
                         transformers >= 0.3,
                         template-haskell >= 2.2,
                         parsec >= 3.0.0,
                         directory >= 1.1,
                         text >= 0.10,
                         arithmoi >= 0.1,
                         process >= 1.0.1.1,
                         either >= 0.1,
                         deepseq >= 1.1,
                         parallel >= 2.2,
                         lens >= 2.0 && < 4.14,
                         safe >= 0.2,
                         mtbdd == 0.12

Benchmark Benchmark
    type: exitcode-stdio-1.0
    main-is: Benchmark.hs

    hs-source-dirs: bench

    ghc-options: -Wall -O2 -main-is Benchmark -rtsopts
    ghc-prof-options: -auto-all

    build-depends:       Penrose,
                         base >= 4,
                         containers >= 0.5.2,
                         mtl >= 2,
                         time >= 1.1,
                         old-locale >= 1,
                         transformers >= 0.3,
                         random >= 1.0 && < 2.0,
                         template-haskell >= 2.2,
                         parsec >= 3.0.0,
                         split >= 0.1 && < 0.3,
                         directory >= 1.1,
                         text >= 0.10,
                         arithmoi >= 0.1,
                         process >= 1.0.1.1,
                         either >= 0.1,
                         deepseq >= 1.1,
                         parallel >= 2.2,
                         lens >= 2.0 && < 4.14,
                         pcre-light >= 0.4,
                         safe >= 0.2,
                         mtbdd == 0.12,
                         semigroups >= 0.7,
                         filepath >= 1.0

Test-Suite tests
    type: exitcode-stdio-1.0

    main-is: TestMain.hs

    hs-source-dirs: test

    ghc-options: -Wall -O2
    ghc-prof-options: -auto-all

    build-depends: Penrose,
                   base >= 4,
                   containers >= 0.5.2,
                   unordered-containers >= 0.2,
                   test-framework >= 0.4,
                   test-framework-quickcheck2 >= 0.3,
                   test-framework-hunit >= 0.3,
                   mtl >= 2,
                   transformers >= 0.3,
                   text >= 0.10,
                   HUnit >= 1.2,
                   QuickCheck >= 2,
                   directory >= 1.1,
                   arithmoi >= 0.1,
                   parsec >= 3.0.0,
                   deepseq >= 1.1,
                   parallel >= 2.2,
                   lens >= 2.0 && < 4.14,
                   either >= 0.1,
                   safe >= 0.2,
                   semigroups >= 0.7,
                   mtbdd == 0.12
